fix: calc